--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,4 +1,4 @@
-<h1 id="page_title">Contact Me :)</h1>
+<h1 id="page_title">Contact Us!</h1>
 
 <div class="skinny_wrapper wrapper_padding">
   <%= form_for @contact do |f| %>
