--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,57 +1,36 @@
 <div class="body">
   <div class="gray--background">
     <div class="home--main">
-      <div class="flexbox">
-        <div class="featured">
-          <% if @posts_featured %>
-            <div class="featured">
-              <%=link_to(image_tag(@posts_featured.image, :class => "image_thumbnail"), @posts_featured )%>
-              <h3 class="article_title"><a href="#"><%= link_to @posts_featured.title, @posts_featured %></a></h3>
-              <p class="date"><%= @posts_featured.created_at.strftime("%A, %b %d")%></p>
-            </div>
-          <% end %>
-        </div>
-        <div class="articles2-6">
-            <% @posts[1..4].each do |post| %>
-              <div class="thumbnail">
-                <%=link_to(image_tag(post.image, :class => "image_thumbnail"), post )%>
-                <div class="thumbnail--container">
-                  <h3 class="article_title"><a href="#"><%= link_to post.title, post %></a></h3>
-                  <p class="date"><%= post.created_at.strftime("%A, %b %d")%></p>
-                </div>
+      <div class="parentflex">
+        <div class="flexbox">
+          <div class="featured divfeatured">
+            <% if @posts_featured %>
+              <div class="featured individual">
+                <%=link_to(image_tag(@posts_featured.image, :class => "image_thumbnail"), @posts_featured )%>
+                <h3 class="article_title"><a href="#"><%= link_to @posts_featured.title, @posts_featured %></a></h3>
+                <p class="date"><%= @posts_featured.created_at.strftime("%A, %b %d")%></p>
               </div>
             <% end %>
-        </div>
-        <div class="container">
-          <div class="exclusive-offer">
-              <h5 class="exclusive-title" id="exclusive-title--id">Sign up now to become a VIP subscriber & get exclusive offers</h5>
-              <p class="exclusive-title">(Limited time only!)</p>
           </div>
-        <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
-        <div class="signup">
-          <div class="clearfix">
-            <div id="mc_embed_signup" class="home--signup">
-            <form action="//herokuapp.us14.list-manage.com/subscribe/post?u=5c2a24e15a906f29e2c6a9b72&amp;id=3081d2e76a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                <div id="mc_embed_signup_scroll">
-            	<h2 style="color: #696969;">Become a VIP subscriber:</h2>
-            <div class="mc-field-group">
-            	<label for="mce-EMAIL">Email Address </label>
-            	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-            </div>
-
-            	<div id="mce-responses" class="clear">
-            		<div class="response" id="mce-error-response" style="display:none"></div>
-            		<div class="response" id="mce-success-response" style="display:none"></div>
-            	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_5c2a24e15a906f29e2c6a9b72_3081d2e76a" tabindex="-1" value=""></div>
-                <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+          <div class="articles2-6">
+              <% @posts[1..4].each do |post| %>
+                <div class="thumbnail">
+                  <%=link_to(image_tag(post.image, :class => "image_thumbnail"), post )%>
+                  <div class="thumbnail--container">
+                    <h3 class="article_title"><a href="#"><%= link_to post.title, post %></a></h3>
+                    <p class="date"><%= post.created_at.strftime("%A, %b %d")%></p>
+                  </div>
                 </div>
-            </form>
-            </div>
+              <% end %>
           </div>
-         </div>
+
         </div>
+        <div class="signupdiv">
+          <%= render 'signup' %>
+        </div>
+
       </div>
+
     </div>
   </div>
 
