--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -185,10 +185,22 @@ footer {
 
 .featured {
   margin-top: 10px;
-    .image_thumbnail {
+    .featured_img {
       width: 100%;
+      height: 100%;
+      max-height: 250px;
       margin-bottom: 10px;
+      position:relative;
+      overflow:hidden;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+
+      .image_thumbnail {
+        width:100%;
+      }
     }
+
     .article_title {
       margin: 0;
       margin-top: 10px;
@@ -701,9 +713,12 @@ hr {
     display: block;
     width: 100%;
     margin-top: 5px;
+    .featured_img {
+      max-height: 100%;
       .image_thumbnail {
         width: 100%;
       }
+    }
   }
 
   .articles2-6 {
