--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -188,7 +188,7 @@ footer {
     .featured_img {
       width: 100%;
       height: 100%;
-      max-height: 250px;
+      max-height: 315px;
       margin-bottom: 10px;
       position:relative;
       overflow:hidden;
@@ -196,14 +196,10 @@ footer {
       flex-direction: column;
       justify-content: center;
 
-      .image_thumbnail {
-        width:100%;
-      }
     }
 
     .article_title {
       margin: 0;
-      margin-top: 10px;
       width: 100%;
       word-wrap: break-word;
       a {
@@ -213,6 +209,26 @@ footer {
         font-size: 30px;
       }
     }
+    .date {
+      font-size: 15px;
+      margin-top: 3px;
+    }
+}
+
+.individual {
+  display: flex;
+  flex-direction: column;
+  overflow: hidden !important;
+  text-overflow: ellipsis;
+
+  img {
+    width: 100%;
+    height: 20%;
+  }
+
+  .article_title {
+    width: 100%;
+  }
 }
 
 .articles2-6 {
@@ -354,6 +370,7 @@ footer {
     width: 76%;
     justify-content: center;
     height: 455px;
+    overflow: hidden;
   }
 }
 
