--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -183,6 +183,10 @@ footer {
 
 ///////////////////////////////////////////////////////////////////////////
 
+.divfeatured {
+  width: 70%;
+}
+
 .featured {
   margin-top: 10px;
     .featured_img {
