--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
       <%= link_to "Articles", posts_path %>
       <%= link_to "Projects", projects_path %>
       <%= link_to "Contact", new_contact_path %>
-      <% if user_signed_in? %>
+      <% if user_signed_in? || admin_signed_in? %>
         <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
       <% end %>
     </div>
@@ -42,7 +42,7 @@
             <%= link_to "Articles", posts_path %>
             <%= link_to "Projects", projects_path %>
             <%= link_to "Contact", new_contact_path %>
-            <% if user_signed_in? %>
+            <% if user_signed_in? || admin_signed_in? %>
               <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
             <% end %>
             <a href="https://twitter.com/johanssonmia09" target="_blank"><i class="fa fa-twitter" aria-hidden="false"></i></a>
