--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
-<h2>Sign up</h2>
-
+<h2 id="page_title">Sign up</h2>
+<div class="skinny_wrapper wrapper_padding">
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
@@ -27,3 +27,5 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+
+</div>
