--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -29,6 +29,10 @@
 <br><%= f.label :keywords %><br>
 <%= f.text_field :keywords %>
 
+<% if user_signed_in? %>
+<%= f.hidden_field :user_id, :value => current_user.id %>
+<% end %>
+
 <br><%= f.submit %>
 
 <% end %>
