--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -30,7 +30,9 @@
 <%= f.text_field :keywords %>
 
 <% if user_signed_in? %>
-<%= f.hidden_field :user_id, :value => current_user.id %>
+  <%= f.hidden_field :user_id, :value => current_user.id %>
+<% else %>
+  <%= f.hidden_field :admin_id, :value => current_admin.id %>
 <% end %>
 
 <br><%= f.submit %>
