--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -38,6 +38,9 @@
 <%= f.label "Snapchat" %>
 <%= f.text_field :snap %>
 
+<%= f.label "Is Admin?" %>
+<%= f.check_box :admin %>
+
 <br><%= f.submit %>
 
 <% end %>
