--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -63,7 +63,7 @@
     <%= markdown @post.content %>
   <hr>
 
-  <% if (user_signed_in? && (current_user.id == @post.user_id)) || admin_signed_in? %>
+  <% if current_user && (current_user.id == @post.user_id || current_user.admin?) %>
     <div id="admin_links">
       <%= link_to "Edit Article", edit_post_path(@post) %>
       <%= link_to "Delete", post_path(@post), method: :delete, data: {confirm: "Are you sure you want to delete this post?"} %>
