--- a/app/views/applies/new.html.erb
+++ b/app/views/applies/new.html.erb
@@ -16,7 +16,7 @@
 
     <br />
     <br />
-    <%= f.label "Write one or two sentences about yourself: " %><br />
+    <%= f.label "Tell us about yourself! (One or two sentences)" %><br />
     <%= f.text_area :description, required: true %>
 
     <br />
@@ -28,4 +28,6 @@
 
     <%= f.submit 'Apply!', class: 'button' %>
   <% end %>
+  <br>
+  <br>
 </div>
