--- a/app/assets/stylesheets/_userprofile.css.scss
+++ b/app/assets/stylesheets/_userprofile.css.scss
@@ -113,3 +113,27 @@
     margin: 0;
   }
 }
+
+.user {
+  text-align: center;
+  a {
+    text-decoration: none;
+    color: #00b5f9;
+    font-size: 20px;
+    &:hover {
+      color: #3f3f3f;
+    }
+  }
+}
+
+.link--edit {
+  text-decoration: none;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: black;
+  padding: 20px;
+  display: block;
+  width: 200px;
+  text-align: center;
+  color: white;
+}
