--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,10 @@
-<h1 id="page_title">Users</h1>
+<h1 id="page_title" style="margin-bottom: -50px;">Users</h1>
 
 <div id="posts_wrapper" class="skinny_wrapper">
   <% @users.each do |user| %>
-      <div class="post">
+      <div class="user">
         <h3><a href="#"><%= link_to user.email, user%></a></h2>
-        <hr>
       </div>
   <% end %>
+  <%= link_to "New User", new_user_path, :class => "link--edit" %>
 </div>
