--- a/app/assets/stylesheets/_userprofile.css.scss
+++ b/app/assets/stylesheets/_userprofile.css.scss
@@ -1,6 +1,6 @@
 .profile_img {
-  width: 100px;
-  height: 100%;
+  width: 80px;
+  height: 80px;
   border-radius: 50%;
 }
 
@@ -38,7 +38,7 @@
   margin-right: auto;
 
   .info {
-    margin-left: 30px;
+    margin-left: 20px;
 
     h2 {
       margin: 0;
@@ -136,4 +136,20 @@
   width: 200px;
   text-align: center;
   color: white;
+}
+
+
+@media (max-width: 600px) {
+  .flex--profile {
+    flex-direction: column;
+    text-align: center;
+    .info {
+      margin-left: 0;
+    }
+    .profile_img  {
+      margin-left: auto;
+      margin-right: auto;
+      margin-bottom: 10px;
+    }
+  }
 }
