--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -45,6 +45,7 @@ html, body {
   transition: all 0.3s ease-in-out;
   display: flex;
   flex-direction: column;
+  text-align: center;
   h1 {
     color: white;
     margin-top: 20px;
@@ -63,8 +64,7 @@ html, body {
     text-decoration: none;
     color: white;
     font-size: 20px;
-    margin-left: auto;
-    margin-right: auto;
+    display: inline-block;
     margin-top: 20px;
     &:hover {
       color: $highlight;
