--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -12,6 +12,9 @@
   <%= f.label "Email" %><br>
   <%= f.text_field :email %>
 
+  <%= f.label "Description" %>
+  <%= f.text_area :description %>
+
   <%= f.label "Password" %>
   <%= f.text_field :encrypted_password %>
 
