--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,5 +6,5 @@
         <h3><a href="#"><%= link_to user.email, user%></a></h2>
       </div>
   <% end %>
-  <%= link_to "New User", new_user_path, :class => "link--edit" %>
+  <%= link_to "New User", new_user_registration_path, :class => "link--edit" %>
 </div>
