--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body onresize="resize()">
+  <body>
 
     <div class="sidebar_menu hide_menu">
       <i class="fa fa-times"></i>
