--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -15,7 +15,7 @@
             <% end %>
           </div>
           <div class="articles2-6">
-              <% @posts[1..4].each do |post| %>
+              <% @posts_approved[1..4].each do |post| %>
                 <div class="thumbnail">
                   <%=link_to(image_tag(post.image, :class => "image_thumbnail"), post )%>
                   <div class="thumbnail--container">
@@ -39,12 +39,14 @@
   <h1 class="section--title">Older Posts: </h1>
 
   <div class="col-2 homepage_content">
-      <% @posts[5..13].each do |post| %>
+    <% if @posts_approved %>
+      <% @posts_approved[5..13].each do |post| %>
         <div class="thumbnail">
           <%=link_to(image_tag(post.image, :class => "image_thumbnail"), post )%>
           <h3 class="article_title"><a href="#"><%= link_to post.title, post %></a></h3>
           <span class="date"><%= post.created_at.strftime("%A, %b %d")%></span>
         </div>
+      <% end %>
       <% end %>
   </div>
 
@@ -57,7 +59,7 @@
     if (height >= 450) {
       $('#image_thumbnail').addClass('big');
       $('.featured').addClass('visible');
-    } else if (height >= 350) {
+    } else if (height >= 300) {
       $('#image_thumbnail').addClass('medium');
       $('#image_thumbnail').removeClass('big');
       $('.featured').addClass('visible');
