--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -6,7 +6,7 @@
 <%= f.label "Last Name" %>
 <%= f.text_field :last_name %>
 
-<%= f.label "Image LINK (working on uploading image capabilities)" %><br>
+<%= f.label "Image LINK" %><br>
 <%= f.text_field :image %>
 
 <%= f.label "Description (in third person)" %>
@@ -17,7 +17,7 @@
 
 <h3>Links (Optional)</h3>
 
-<%= f.label "Website (available for seniority writers only)" %>
+<%= f.label "Website" %>
 <%= f.text_field :website %>
 
 <%= f.label "Instagram" %>
