--- a/app/assets/stylesheets/_userprofile.css.scss
+++ b/app/assets/stylesheets/_userprofile.css.scss
@@ -1,3 +1,133 @@
+.box {
+  position:relative;
+  vertical-align: middle;
+  color: $highlight;
+  display: inline-block;
+  height: 60px;
+  line-height: 60px;
+  text-align: center;
+  transition: 0.5s;
+  padding: 10px;
+  cursor: pointer;
+  -webkit-transition:0.5s;
+}
+
+.thelink {
+  margin-right: 2px;
+  margin-left: 2px;
+}
+
+.box:hover {
+  color: $highlight;
+}
+
+.box::before, .box::after {
+  width: 100%;
+  height:100%;
+  z-index: 3;
+  content:'';
+  position: absolute;
+  top:0;
+  left:0;
+  box-sizing: border-box;
+  -webkit-transform: scale(0);
+  transition: 0.5s;
+}
+
+.foo::before {
+  border-bottom: 6px solid $highlight;
+  border-left: 6px solid $highlight;
+  -webkit-transform-origin: 0 100%;
+}
+
+.foo::after {
+  border-top: 6px solid $highlight;
+  border-right: 6px solid $highlight;
+  -webkit-transform-origin: 100% 0%;
+}
+
+
+.bar::before {
+  border-bottom: 6px solid $highlight;
+  border-left: 6px solid $highlight;
+  -webkit-transform-origin: 100% 0%;
+}
+
+.bar::after {
+  border-top: 6px solid $highlight;
+  border-right: 6px solid $highlight;
+  -webkit-transform-origin: 0% 100%;
+}
+
+.curmudgeon::before {
+  border-bottom: 6px solid $highlight;
+  border-left: 0;
+  -webkit-transform-origin: 0% 100%;
+}
+
+.curmudgeon::after {
+  border-top: 0;
+  border-right: 0;
+  -webkit-transform-origin: 50% 50%;
+}
+
+.box:hover::after, .box:hover::before {
+  -webkit-transform: scale(1);
+}
+
+.guidelines {
+  display: flex;
+  flex-direction: row;
+  margin-top: 50px;
+  margin-right: -2px;
+  margin-left: -4px;
+  .thelink {
+    width: 100%;
+  }
+  a {
+    text-decoration: none;
+    width: 100%;
+  }
+  .box {
+    height: 200px;
+    margin-right: 2px;
+    margin-left: 2px;
+    width: 100%;
+    background-size: cover;
+    background-position: center;
+    color: white;
+    font-family: 'Vollkorn', serif;
+    display: flex;
+    justify-content:center;
+    flex-direction: column;
+    text-align: center;
+    transition: color 0.25s;
+
+    p {
+      line-height: 100%;
+      margin: 0;
+      padding: 5px;
+      font-size: 30px;
+      -webkit-text-stroke: 1px black;
+    }
+  }
+  .G1 {
+    background-image: url("topic.jpeg");
+  }
+  .G2 {
+    background-image: url("scarf.jpeg");
+  }
+  .G3 {
+    background-image: url("writing.jpg");
+  }
+  .G4 {
+    background-image: url("glasses.jpeg");
+  }
+  .G5 {
+    background-image: url("photo.jpeg");
+  }
+}
+
 .profile_img {
   min-width: 80px;
   width: 80px;
@@ -166,6 +296,21 @@
   }
 }
 
+@media (max-width: 900px) {
+  .guidelines {
+    flex-wrap: wrap;
+    margin: 0;
+    margin-top: 50px;
+    .thelink {
+      width: 50%;
+      margin: 0;
+      .box {
+        margin: 0;
+      }
+    }
+  }
+}
+
 
 @media (max-width: 600px) {
   .flex--profile {
@@ -178,6 +323,11 @@
       margin-left: auto;
       margin-right: auto;
       margin-bottom: 10px;
+    }
+  }
+  .guidelines {
+    .thelink {
+      width: 100%;
     }
   }
 }
