--- a/app/assets/stylesheets/_posts_projects.css.scss
+++ b/app/assets/stylesheets/_posts_projects.css.scss
@@ -155,3 +155,27 @@ hr {
     }
   }
 }
+
+
+
+@media (max-width: 386px) {
+  .flex--container--post--title {
+
+    header {
+
+      .date {
+        font-size: 0.8em;
+        color: #00b5f9;
+        padding-bottom: 10px;
+        font-family: 'Roboto Condensed', sans-serif;
+      }
+      h1 {
+        font-size: 2em;
+        margin-bottom: 0;
+        padding: 10px;
+        color: #2b2b2b;
+        font-family: 'Roboto Condensed', sans-serif;
+      }
+    }
+  }
+}
